--- a/.gitignore
+++ b/.gitignore
@@ -177,8 +177,8 @@ publish/
 *.pubxml
 *.publishproj
 
-# Microsoft Azure Web App publish settings. Comment the next line if you want to
-# checkin your Azure Web App publish settings, but sensitive information contained
+# Microsoft Azure Web Shop publish settings. Comment the next line if you want to
+# checkin your Azure Web Shop publish settings, but sensitive information contained
 # in these scripts will be unencrypted
 PublishScripts/
 
