--- a/ShopProject/package.json
+++ b/ShopProject/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "webpack-react-redux-starter",
+  "name": "MyShop",
   "version": "0.7.0",
-  "description": "Modern starter kit for React projects.",
-  "author": "Aliaksandr Stsiarzhanau <sterzhanoff@gmail.com>",
+  "description": "Online Shop",
+  "author": "Artem Gribanov <gribanovartem22@gmail.com>",
   "license": "MIT",
   "scripts": {
     "serve:src": "cross-env NODE_ENV=development babel-node ./tools/devServer.js",
@@ -53,8 +53,8 @@
     "core-js": "3.6.4",
     "history": "4.10.1",
     "prop-types": "15.7.2",
-    "react": "16.11.0",
-    "react-dom": "16.11.0",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
     "react-hot-loader": "4.12.19",
     "react-redux": "7.1.3",
     "react-router-dom": "5.1.2",
@@ -87,30 +87,30 @@
     "babel-eslint": "10.0.3",
     "babel-loader": "8.0.6",
     "browser-sync": "2.26.7",
-    "browserslist": "4.8.6",
+    "browserslist": "4.8.7",
     "canvas": "2.6.1",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-enzyme": "1.0.0-beta.1",
     "chalk": "3.0.0",
-    "cheerio": "1.0.0-rc.2",
+    "cheerio": "1.0.0-rc.3",
     "compression": "1.7.4",
     "compression-webpack-plugin": "3.1.0",
     "cross-env": "7.0.0",
     "css-loader": "3.4.2",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
-    "eslint": "6.1.0",
+    "eslint": "6.8.0",
     "eslint-config-airbnb": "18.0.1",
-    "eslint-import-resolver-webpack": "0.11.1",
+    "eslint-import-resolver-webpack": "0.12.1",
     "eslint-loader": "3.0.3",
-    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-import": "2.20.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.14.3",
-    "eslint-plugin-react-hooks": "1.7.0",
+    "eslint-plugin-react": "7.18.3",
+    "eslint-plugin-react-hooks": "2.3.0",
     "file-loader": "5.0.2",
     "html-webpack-plugin": "3.2.0",
-    "husky": "4.2.2",
+    "husky": "4.2.3",
     "imagemin-webpack-plugin": "2.4.2",
     "istanbul-instrumenter-loader": "3.0.1",
     "jsdom": "16.1.0",
@@ -124,13 +124,13 @@
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "postcss-flexbugs-fixes": "4.2.0",
     "postcss-loader": "3.0.0",
-    "react-test-renderer": "16.11.0",
+    "react-test-renderer": "16.12.0",
     "redux-devtools-extension": "2.13.8",
     "rimraf": "3.0.2",
     "sinon": "8.1.1",
     "sinon-chai": "3.4.0",
     "style-loader": "1.1.3",
-    "stylelint": "13.1.0",
+    "stylelint": "13.2.0",
     "stylelint-config-standard": "20.0.0",
     "stylelint-webpack-plugin": "1.2.3",
     "svg-sprite-loader": "4.2.1",
