--- a/my_webpack-react-redux-starter/package.json
+++ b/my_webpack-react-redux-starter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myshop",
+  "name": "MyShop",
   "version": "0.7.0",
   "description": "Online Shop",
   "author": "Artem Gribanov <gribanovartem22@gmail.com>",
