--- a/ShopProject/package.json
+++ b/ShopProject/package.json
@@ -48,6 +48,7 @@
   ],
   "dependencies": {
     "@hot-loader/react-dom": "16.11.0",
+    "bootstrap": "^4.4.1",
     "clsx": "1.1.0",
     "connected-react-router": "6.7.0",
     "core-js": "3.6.4",
