--- a/ShopProject/package.json
+++ b/ShopProject/package.json
@@ -52,7 +52,9 @@
     "clsx": "1.1.0",
     "connected-react-router": "6.7.0",
     "core-js": "3.6.4",
+    "es6-promise": "^4.2.8",
     "history": "4.10.1",
+    "isomorphic-fetch": "^2.2.1",
     "prop-types": "15.7.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
