--- a/ShopProject/package.json
+++ b/ShopProject/package.json
@@ -47,12 +47,16 @@
     "defaults"
   ],
   "dependencies": {
+    "@firebase/app": "^0.5.5",
+    "@firebase/firestore": "^1.12.0",
+    "@google-cloud/storage": "^4.4.0",
     "@hot-loader/react-dom": "16.11.0",
     "bootstrap": "^4.4.1",
     "clsx": "1.1.0",
     "connected-react-router": "6.7.0",
     "core-js": "3.6.4",
     "es6-promise": "^4.2.8",
+    "firebase": "^7.10.0",
     "history": "4.10.1",
     "isomorphic-fetch": "^2.2.1",
     "prop-types": "15.7.2",
