--- a/ShopProject/package.json
+++ b/ShopProject/package.json
@@ -136,8 +136,8 @@
     "sinon": "8.1.1",
     "sinon-chai": "3.4.0",
     "style-loader": "1.1.3",
-    "stylelint": "13.2.0",
-    "stylelint-config-standard": "20.0.0",
+    "stylelint": "^13.2.0",
+    "stylelint-config-standard": "^20.0.0",
     "stylelint-webpack-plugin": "1.2.3",
     "svg-sprite-loader": "4.2.1",
     "svgo": "1.3.2",
