--- a/myshop/package.json
+++ b/myshop/package.json
@@ -1,43 +1,190 @@
 {
   "name": "myshop",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.7.0",
+  "description": "Online Shop",
+  "author": "Artem Gribanov <gribanovartem22@gmail.com>",
+  "license": "MIT",
+  "scripts": {
+    "serve:src": "cross-env NODE_ENV=development babel-node ./tools/devServer.js",
+    "serve:build": "cross-env NODE_ENV=production babel-node ./tools/prodServer.js",
+    "prestart": "babel-node ./tools/startMessage.js",
+    "start": "npm run serve:src",
+    "clean": "rimraf ./build",
+    "prebuild": "run-s clean test",
+    "build": "cross-env NODE_ENV=production babel-node ./tools/build.js",
+    "start:prod": "npm run serve:build",
+    "lint": "eslint . --ext .js --ext .jsx",
+    "lint:fix": "eslint . --ext .js --ext .jsx --fix ",
+    "slint": "stylelint **/*.css",
+    "slint:fix": "stylelint **/*.css --fix",
+    "test": "cross-env TEST=true mochapack",
+    "test:watch": "cross-env TEST=true mochapack --watch",
+    "cover": "cross-env COVER=true nyc --reporter=lcov --reporter=text npm run test"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "post-commit": "git update-index -g"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "eslint --fix"
+    ],
+    "*.css": [
+      "stylelint --fix"
+    ]
+  },
+  "nyc": {
+    "include": [
+      "src/**/*.js",
+      "src/**/*.jsx"
+    ],
+    "instrument": false,
+    "sourceMap": false
+  },
+  "browserslist": [
+    "defaults"
+  ],
   "dependencies": {
+    "@firebase/app": "^0.5.5",
+    "@firebase/firestore": "^1.12.0",
+    "@google-cloud/storage": "^4.4.0",
+    "@hot-loader/react-dom": "16.11.0",
     "bootstrap": "^4.4.1",
+    "clsx": "1.1.0",
+    "connected-react-router": "6.7.0",
+    "core-js": "3.6.4",
     "es6-promise": "^4.2.8",
+    "firebase": "^7.10.0",
     "history": "4.10.1",
     "isomorphic-fetch": "^2.2.1",
     "prop-types": "15.7.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-hot-loader": "4.12.19",
     "react-redux": "7.1.3",
     "react-router-dom": "5.1.2",
     "redux": "4.0.5",
     "redux-saga": "1.1.3",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.1",
-    "@testing-library/user-event": "^7.2.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0"
+    "regenerator-runtime": "0.13.3",
+    "reselect": "4.0.0",
+    "whatwg-fetch": "3.0.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@babel/core": "7.8.4",
+    "@babel/node": "7.8.4",
+    "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@babel/plugin-proposal-decorators": "7.8.3",
+    "@babel/plugin-proposal-do-expressions": "7.8.3",
+    "@babel/plugin-proposal-export-default-from": "7.8.3",
+    "@babel/plugin-proposal-export-namespace-from": "7.8.3",
+    "@babel/plugin-proposal-function-bind": "7.8.3",
+    "@babel/plugin-proposal-function-sent": "7.8.3",
+    "@babel/plugin-proposal-json-strings": "7.8.3",
+    "@babel/plugin-proposal-logical-assignment-operators": "7.8.3",
+    "@babel/plugin-proposal-numeric-separator": "7.8.3",
+    "@babel/plugin-proposal-pipeline-operator": "7.8.3",
+    "@babel/plugin-proposal-throw-expressions": "7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/plugin-syntax-import-meta": "7.8.3",
+    "@babel/preset-env": "7.8.4",
+    "@babel/preset-react": "7.8.3",
+    "autoprefixer": "9.7.4",
+    "babel-eslint": "10.0.3",
+    "babel-loader": "8.0.6",
+    "browser-sync": "2.26.7",
+    "browserslist": "4.8.7",
+    "canvas": "2.6.1",
+    "chai": "4.2.0",
+    "chai-as-promised": "7.1.1",
+    "chai-enzyme": "1.0.0-beta.1",
+    "chalk": "3.0.0",
+    "cheerio": "1.0.0-rc.3",
+    "compression": "1.7.4",
+    "compression-webpack-plugin": "3.1.0",
+    "cross-env": "7.0.0",
+    "css-loader": "3.4.2",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.2",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-import-resolver-webpack": "0.12.1",
+    "eslint-loader": "3.0.3",
+    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.18.3",
+    "eslint-plugin-react-hooks": "2.3.0",
+    "file-loader": "5.0.2",
+    "html-webpack-plugin": "3.2.0",
+    "imagemin-webpack-plugin": "2.4.2",
+    "istanbul-instrumenter-loader": "3.0.1",
+    "jsdom": "16.1.0",
+    "lint-staged": "10.0.7",
+    "lost": "8.3.1",
+    "mini-css-extract-plugin": "0.9.0",
+    "mocha": "7.0.1",
+    "mochapack": "1.1.13",
+    "npm-run-all": "4.1.5",
+    "nyc": "15.0.0",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
+    "postcss-flexbugs-fixes": "4.2.0",
+    "postcss-loader": "3.0.0",
+    "react-test-renderer": "16.12.0",
+    "redux-devtools-extension": "2.13.8",
+    "rimraf": "3.0.2",
+    "sinon": "8.1.1",
+    "sinon-chai": "3.4.0",
+    "style-loader": "1.1.3",
+    "stylelint": "13.2.0",
+    "stylelint-config-standard": "20.0.0",
+    "stylelint-webpack-plugin": "1.2.3",
+    "svg-sprite-loader": "4.2.1",
+    "svgo": "1.3.2",
+    "svgo-loader": "2.2.1",
+    "terser-webpack-plugin": "2.3.4",
+    "url-loader": "3.0.0",
+    "webpack": "4.41.6",
+    "webpack-bundle-analyzer": "3.6.0",
+    "webpack-dev-middleware": "3.7.2",
+    "webpack-dev-server": "^3.10.3",
+    "webpack-hot-middleware": "2.25.0",
+    "webpack-node-externals": "1.7.2"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "keywords": [
+    "es6",
+    "react",
+    "react 16",
+    "react-router",
+    "starter",
+    "kit",
+    "boilerplate",
+    "hot",
+    "live",
+    "reload",
+    "edit",
+    "editing",
+    "hmr",
+    "webpack",
+    "webpack 4",
+    "browsersync",
+    "browser-sync",
+    "lint",
+    "eslint",
+    "unit",
+    "test",
+    "mocha",
+    "mochapack",
+    "enzyme",
+    "jsdom",
+    "css",
+    "modules",
+    "css-modules",
+    "postcss",
+    "stylelint"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/stsiarzhanau/webpack-react-redux-starter.git"
   }
 }
