--- a/ShopProject/package.json
+++ b/ShopProject/package.json
@@ -52,10 +52,12 @@
     "@google-cloud/storage": "^4.4.0",
     "@hot-loader/react-dom": "16.11.0",
     "bootstrap": "^4.4.1",
+    "chai": "^4.2.0",
     "clsx": "1.1.0",
     "connected-react-router": "6.7.0",
     "core-js": "3.6.4",
     "es6-promise": "^4.2.8",
+    "expect": "^25.1.0",
     "firebase": "^7.10.0",
     "history": "4.10.1",
     "isomorphic-fetch": "^2.2.1",
@@ -96,9 +98,6 @@
     "browser-sync": "2.26.7",
     "browserslist": "4.8.7",
     "canvas": "2.6.1",
-    "chai": "4.2.0",
-    "chai-as-promised": "7.1.1",
-    "chai-enzyme": "1.0.0-beta.1",
     "chalk": "3.0.0",
     "cheerio": "1.0.0-rc.3",
     "compression": "1.7.4",
@@ -120,6 +119,7 @@
     "html-webpack-plugin": "3.2.0",
     "imagemin-webpack-plugin": "2.4.2",
     "istanbul-instrumenter-loader": "3.0.1",
+    "jest": "^25.1.0",
     "jsdom": "16.1.0",
     "lint-staged": "10.0.7",
     "lost": "8.3.1",
