--- a/ShopProject/package.json
+++ b/ShopProject/package.json
@@ -53,6 +53,7 @@
     "@hot-loader/react-dom": "16.11.0",
     "bootstrap": "^4.4.1",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "clsx": "1.1.0",
     "connected-react-router": "6.7.0",
     "core-js": "3.6.4",
@@ -98,6 +99,7 @@
     "browser-sync": "2.26.7",
     "browserslist": "4.8.7",
     "canvas": "2.6.1",
+    "chai-enzyme": "^1.0.0-beta.1",
     "chalk": "3.0.0",
     "cheerio": "1.0.0-rc.3",
     "compression": "1.7.4",
