--- a/ShopProject/package.json
+++ b/ShopProject/package.json
@@ -62,6 +62,7 @@
     "firebase": "^7.10.0",
     "history": "4.10.1",
     "isomorphic-fetch": "^2.2.1",
+    "nodemailer": "^6.4.6",
     "prop-types": "15.7.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
