--- a/ShopProject/package.json
+++ b/ShopProject/package.json
@@ -51,6 +51,8 @@
     "@firebase/firestore": "^1.12.0",
     "@google-cloud/storage": "^4.4.0",
     "@hot-loader/react-dom": "16.11.0",
+    "@material-ui/core": "^4.9.10",
+    "antd": "^4.1.3",
     "bootstrap": "^4.4.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
@@ -68,6 +70,7 @@
     "react-dom": "16.12.0",
     "react-hot-loader": "4.12.19",
     "react-redux": "7.1.3",
+    "react-router": "^5.1.2",
     "react-router-dom": "5.1.2",
     "redux": "4.0.5",
     "redux-saga": "1.1.3",
