--- a/ShopProject/package.json
+++ b/ShopProject/package.json
@@ -47,6 +47,7 @@
     "defaults"
   ],
   "dependencies": {
+    "@ant-design/icons": "^4.0.6",
     "@firebase/app": "^0.5.5",
     "@firebase/firestore": "^1.12.0",
     "@google-cloud/storage": "^4.4.0",
